chandeliers-lus/tests/compile_fail/ui/tc/const/fby.rs
//! Trying to use a temporal operator in a `const` context.
chandeliers_lus::decl! {
    const X : int = 0 fby 1 fby 2;
}

fn main() {}
